 cnp-allow-only-kibana-elastic-connections-kjkz60h.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-allow-only-kibana-elastic-connections-yla0qyc
  namespace: default
spec:
  description: "Allow kibana to only connect to elastic search"
  endpointSelector:
    matchLabels:
      app: elasticsearch-master
      chart: elasticsearch
      controller-revision-hash: elasticsearch-master-78777c797c
      release: elasticsearch
      statefulset.kubernetes.io/pod-name: elasticsearch-master-2
  egress:
  - toEndpoints:
    - matchLabels:
        app: elasticsearch
